# Nfl_Draft_Simulator

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Player.h  README.md  SimDraft.cpp  desktop.ini
Draft_Sim/: LoadInfo.cpp  LoadInfo.h  Player.cpp  Player.h  ScoringEngine.cpp  ScoringEngine.h  SimDraft.cpp  SimDraft.h  Team.cpp  Team.h  main.cpp
Draft_Sim/Back End/Include/: ScoringEngine.h
Draft_Sim/Back End/src/: LoadInfo.cpp  ScoringEngine.cpp  SimDraft.cpp  Team.cpp  main.cpp
Draft_Sim/BackEnd/: CMakeLists.txt
Draft_Sim/BackEnd/Data/JSONS/: DraftOrder.json  Players.json  TeamConfig.json
Draft_Sim/BackEnd/Include/: DraftSession.h  Player.h  RNG.h  ScoringEngine.h  SimDraft.h
Draft_Sim/BackEnd/src/: DraftSession.cpp  LoadInfo.cpp  SimDraft.cpp  Team.cpp  main.cpp
Draft_Sim/Front End/CSS/: DraftPage.css  HomePage.css
Draft_Sim/Front End/HTML/: DraftPage.html  HomePage.html
Draft_Sim/Front End/JavaScript/: DraftPage.js  HomePage.js
Draft_Sim/HTML/: DraftPage.html  HomePage.html
Draft_Sim/JSONS/: DraftOrder.json  Players.json  TeamConfig.json
